Added GrailsMelodyPlugin. Tweaked GRAILS_OPTS. Bumped up logging verbosity.